# AdSim

./: .gitignore  AGENTS.md  README.md  pyproject.toml  render.yaml
.cursor/rules/: orchestrator.mdc
.github/workflows/: benchmarks-update.yml
backend/: creative_generator.py  discovery.py  main.py  persona_generator.py  requirements.txt  run_persona_simulation.py
config/: sources.default.json
dashboard/: .env.example  README.md  package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/(dashboard)/: layout.tsx
dashboard/src/components/: nav.tsx  page-header.tsx  page-transition.tsx  providers.tsx  theme-toggle.tsx
dashboard/src/lib/: api.ts  demo-data.ts  example-campaigns.ts  use-mounted.ts
docs/: DEPLOYMENT.md  SUBSYSTEMS.md  sources.md
frontend/: package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/campaign-builder/: page.tsx
frontend/app/optimization-insights/: page.tsx
frontend/app/persona-explorer/: page.tsx
frontend/app/simulation-results/: page.tsx
scrapers/: wordstream_ctr_scraper.py
scripts/: update_benchmarks.sh
simulation/: __init__.py  campaign_model.py  monte_carlo.py  optimization.py  persona_engine.py
src/adsim_ingestion/: __main__.py  calibration.py  cli.py  db.py  kaggle_loader.py  models.py  normalize.py  pipeline.py  scrape_debug.py
src/adsim_ingestion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/adsim_ingestion/scrapers/: common.py  sources.py  wordstream.py
(+15 files in other folders)
