[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adsim-ingestion"
version = "0.1.0"
description = "AdSim benchmark ingestion, normalization, and calibration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12",
  "duckdb>=1.0.0",
  "html5lib>=1.1",
  "lxml>=5.2",
  "numpy>=1.26",
  "pandas>=2.2",
  "playwright>=1.46",
  "pydantic>=2.7",
  "python-dateutil>=2.9",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
]
kaggle = [
  "kaggle>=1.6",
]

[project.scripts]
adsim-ingest = "adsim_ingestion.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

